# Geometry

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  REUSE.toml  subsystem_envelopes.csv
.github/workflows/: build-test.yml  ci.yml
apps/: CMakeLists.txt  build_geometry.cpp  validate_geometry.cpp
cmake/: SHiPGeometryConfig.cmake.in
include/SHiPGeometry/: SHiPGeometry.h  SHiPMaterials.h
src/: CMakeLists.txt  SHiPGeometry.cpp  SHiPMaterials.cpp
subsystems/: CMakeLists.txt
subsystems/Calorimeter/: CMakeLists.txt  README.md  test_calorimeter.cpp
subsystems/Calorimeter/include/Calorimeter/: CalorimeterFactory.h
subsystems/Calorimeter/src/: CalorimeterFactory.cpp
subsystems/Cavern/: CMakeLists.txt  README.md  test_cavern.cpp
subsystems/Cavern/include/Cavern/: CavernFactory.h
subsystems/Cavern/src/: CavernFactory.cpp
subsystems/DecayVolume/: CMakeLists.txt  README.md  test_decayvolume.cpp
subsystems/DecayVolume/include/DecayVolume/: DecayVolumeFactory.h
subsystems/DecayVolume/src/: DecayVolumeFactory.cpp
subsystems/Magnet/: CMakeLists.txt  README.md  test_magnet.cpp
subsystems/Magnet/include/Magnet/: MagnetFactory.h
subsystems/Magnet/src/: MagnetFactory.cpp
subsystems/MuonShield/: CMakeLists.txt  README.md  test_muonshield.cpp
subsystems/MuonShield/include/MuonShield/: MuonShieldFactory.h
subsystems/MuonShield/src/: MuonShieldFactory.cpp
subsystems/TimingDetector/: CMakeLists.txt  README.md  test_timingdetector.cpp
subsystems/TimingDetector/data/: timing_detector.gmx
subsystems/TimingDetector/include/TimingDetector/: SHiPTimingDetInterface.h  TimingDetectorFactory.h
subsystems/TimingDetector/src/: TimingDetectorFactory.cpp
subsystems/Trackers/: CMakeLists.txt  README.md  test_trackers.cpp
subsystems/Trackers/include/Trackers/: TrackersFactory.h
subsystems/Trackers/src/: TrackersFactory.cpp
subsystems/UpstreamTagger/: CMakeLists.txt  README.md  test_upstreamtagger.cpp
subsystems/UpstreamTagger/include/UpstreamTagger/: SHiPUBTManager.h  UpstreamTaggerFactory.h
subsystems/UpstreamTagger/src/: UpstreamTaggerFactory.cpp
tests/: CMakeLists.txt  test_builder.cpp  test_materials.cpp
