# SPDX-License-Identifier: LGPL-3.0-or-later
# Copyright (C) CERN for the benefit of the SHiP Collaboration

# Subsystem directories (in implementation order)
add_subdirectory(Cavern)
add_subdirectory(Target)
add_subdirectory(MuonShield)
add_subdirectory(Magnet)
add_subdirectory(DecayVolume)
add_subdirectory(Trackers)
add_subdirectory(Calorimeter)
add_subdirectory(UpstreamTagger)
add_subdirectory(TimingDetector)